<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    app:contentPadding="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/title"
                android:textSize="24sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvZonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_weight="1"
                android:text="@string/zonlicht_text"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tvZonlicht"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zonlicht_hvl"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvWaterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_weight="1"
                android:text="@string/water_text"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tvWater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/water_per_week"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvNotitieText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notitie_text"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/tvNotitie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notitie"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPlantDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:textSize="16sp"
                android:gravity="end"
                android:text="@string/datum_plant" />

        </LinearLayout>




    </LinearLayout>
</androidx.cardview.widget.CardView>