<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.AddPlantFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_naam" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:boxCornerRadiusTopEnd="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/day" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:boxCornerRadiusTopEnd="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etMonth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/month" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:boxCornerRadiusTopEnd="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etYear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/year" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvHvlWater"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hvl_water"/>

                <RadioGroup
                    android:id="@+id/rgWater"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radioWater1x"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eenx_water" />

                    <RadioButton
                        android:id="@+id/radioWater2x"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tweex_water" />
                </RadioGroup>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvNotificatie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notificaties"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <Switch
                        android:id="@+id/switchNotificatie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/water_geven"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvHvlZonlicht"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hvl_zonlicht"/>

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/rgZon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RadioButton
                        android:id="@+id/radioZonWeinig"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weinig" />
                    <RadioButton
                        android:id="@+id/radioZonGemiddeld"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gemiddeld"/>
                    <RadioButton
                        android:id="@+id/radioZonVeel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/veel"/>
                </RadioGroup>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNotities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_notitie" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save" />



</androidx.constraintlayout.widget.ConstraintLayout>